Fix sidebar on mobile

--- a/static/styles/layout.less
+++ b/static/styles/layout.less
@@ -427,12 +427,7 @@ table.dashboard {
     overflow: hidden;
   }
 
-  .sidebar {
-    margin: 0;
-    display: none;
-    transform: none;
-    &.show { display: block; }
-  }
+  .sidebar { margin: 0; transform: none; }
 
   .sidebar-wrap {
     width: 280px;
